src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND_NOT
    BR
    CASE
    DEFAULT
    DOUBLE_QUOTES
    MAKE
    SINGLE_QUOTES
    SWITCH

Grammar

Rule 0     S' -> SourceFile
Rule 1     lcurly -> LCURLY
Rule 2     rcurly -> RCURLY
Rule 3     Type -> TypeName
Rule 4     Type -> TypeLit
Rule 5     TypeName -> ID
Rule 6     TypeName -> DATA_TYPE
Rule 7     TypeLit -> ArrayType
Rule 8     TypeLit -> StructType
Rule 9     TypeLit -> PointerType
Rule 10    TypeLit -> SliceType
Rule 11    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 12    ArrayLength -> Expression
Rule 13    SliceType -> LSQUARE RSQUARE ElementType
Rule 14    ElementType -> Type
Rule 15    PointerType -> STAR BaseType
Rule 16    BaseType -> Type
Rule 17    StructType -> STRUCT lcurly FieldDeclList rcurly
Rule 18    FieldDeclList -> FieldDeclList FieldDecl SEMICOLON
Rule 19    FieldDeclList -> FieldDecl SEMICOLON
Rule 20    FieldDecl -> IdentifierList Type
Rule 21    Block -> lcurly StatementList rcurly
Rule 22    Block -> lcurly rcurly
Rule 23    StatementList -> StatementList Statement SEMICOLON
Rule 24    StatementList -> Statement SEMICOLON
Rule 25    Declaration -> ConstDecl SEMICOLON
Rule 26    Declaration -> TypeDecl SEMICOLON
Rule 27    Declaration -> VarDecl SEMICOLON
Rule 28    TopLevelDecl -> Declaration
Rule 29    TopLevelDecl -> FunctionDecl
Rule 30    TopLevelDecl -> MethodDecl
Rule 31    ConstDecl -> CONST ConstSpec
Rule 32    ConstSpec -> IdentifierList EQ ExpressionList
Rule 33    IdentifierList -> IdentifierList COMMA ID
Rule 34    IdentifierList -> ID
Rule 35    ExpressionList -> ExpressionList COMMA Expression
Rule 36    ExpressionList -> Expression
Rule 37    TypeDecl -> TYPE ID Type
Rule 38    VarDecl -> VAR VarSpec
Rule 39    VarSpec -> IdentifierList Type
Rule 40    VarSpec -> IdentifierList Type EQ ExpressionList
Rule 41    ShortVarDecl -> IdentifierList ASSIGN ExpressionList SEMICOLON
Rule 42    FunctionDecl -> FUNC FunctionName Signature FunctionBody
Rule 43    FunctionDecl -> FUNC FunctionName Signature SEMICOLON
Rule 44    FunctionName -> ID
Rule 45    Signature -> Parameters
Rule 46    Signature -> Parameters Result
Rule 47    Parameters -> LROUND ParameterList RROUND
Rule 48    Parameters -> LROUND RROUND
Rule 49    ParameterList -> ParameterList COMMA ParameterDecl
Rule 50    ParameterList -> ParameterDecl
Rule 51    ParameterDecl -> IdentifierList Type
Rule 52    Result -> Type
Rule 53    FunctionBody -> Block
Rule 54    MethodDecl -> FUNC Receiver MethodName Signature
Rule 55    MethodDecl -> FUNC Receiver MethodName Signature FunctionBody
Rule 56    MethodName -> ID
Rule 57    Receiver -> LROUND ParameterDecl RROUND
Rule 58    Operand -> Literal
Rule 59    Operand -> OperandName
Rule 60    Operand -> LROUND Expression RROUND
Rule 61    Literal -> BasicLit
Rule 62    Literal -> CompositeLit
Rule 63    BasicLit -> INT_LIT
Rule 64    BasicLit -> FLOAT_LIT
Rule 65    BasicLit -> STRING_LIT
Rule 66    BasicLit -> BOOL_LIT
Rule 67    BasicLit -> CHAR_LIT
Rule 68    BasicLit -> NIL
Rule 69    OperandName -> ID
Rule 70    CompositeLit -> LiteralType LiteralValue
Rule 71    LiteralType -> StructType
Rule 72    LiteralType -> ArrayType
Rule 73    LiteralType -> SliceType
Rule 74    LiteralType -> ID
Rule 75    LiteralValue -> lcurly rcurly
Rule 76    LiteralValue -> lcurly ElementList rcurly
Rule 77    ElementList -> Element
Rule 78    ElementList -> ElementList COMMA Element
Rule 79    Element -> Expression
Rule 80    Element -> LiteralValue
Rule 81    PrimaryExpr -> Operand
Rule 82    PrimaryExpr -> PrimaryExpr Selector
Rule 83    PrimaryExpr -> PrimaryExpr Index
Rule 84    PrimaryExpr -> PrimaryExpr Arguments
Rule 85    Selector -> DOT ID
Rule 86    Index -> LSQUARE Expression RSQUARE
Rule 87    Arguments -> LROUND ExpressionList RROUND
Rule 88    Arguments -> LROUND RROUND
Rule 89    Expression -> UnaryExpr
Rule 90    Expression -> Expression OR_OR Expression
Rule 91    Expression -> Expression AMP_AMP Expression
Rule 92    Expression -> Expression EQ_EQ Expression
Rule 93    Expression -> Expression NOT_EQ Expression
Rule 94    Expression -> Expression LT Expression
Rule 95    Expression -> Expression LE Expression
Rule 96    Expression -> Expression GT Expression
Rule 97    Expression -> Expression GE Expression
Rule 98    Expression -> Expression PLUS Expression
Rule 99    Expression -> Expression MINUS Expression
Rule 100   Expression -> Expression OR Expression
Rule 101   Expression -> Expression CARET Expression
Rule 102   Expression -> Expression STAR Expression
Rule 103   Expression -> Expression DIVIDE Expression
Rule 104   Expression -> Expression MODULO Expression
Rule 105   Expression -> Expression LSHIFT Expression
Rule 106   Expression -> Expression RSHIFT Expression
Rule 107   Expression -> Expression AMP Expression
Rule 108   UnaryExpr -> PrimaryExpr
Rule 109   UnaryExpr -> unary_op UnaryExpr
Rule 110   rel_op -> EQ_EQ
Rule 111   rel_op -> NOT_EQ
Rule 112   rel_op -> LT
Rule 113   rel_op -> LE
Rule 114   rel_op -> GT
Rule 115   rel_op -> GE
Rule 116   add_op -> PLUS
Rule 117   add_op -> MINUS
Rule 118   add_op -> OR
Rule 119   add_op -> CARET
Rule 120   mul_op -> STAR
Rule 121   mul_op -> DIVIDE
Rule 122   mul_op -> MODULO
Rule 123   mul_op -> LSHIFT
Rule 124   mul_op -> RSHIFT
Rule 125   mul_op -> AMP
Rule 126   unary_op -> PLUS
Rule 127   unary_op -> MINUS
Rule 128   unary_op -> NOT
Rule 129   unary_op -> CARET
Rule 130   unary_op -> STAR
Rule 131   unary_op -> AMP
Rule 132   Statement -> Declaration
Rule 133   Statement -> LabeledStmt
Rule 134   Statement -> ReturnStmt
Rule 135   Statement -> BreakStmt
Rule 136   Statement -> ContinueStmt
Rule 137   Statement -> GotoStmt
Rule 138   Statement -> Block
Rule 139   Statement -> IfStmt
Rule 140   Statement -> ForStmt
Rule 141   Statement -> SimpleStmt SEMICOLON
Rule 142   SimpleStmt -> ExpressionStmt
Rule 143   SimpleStmt -> IncDecStmt
Rule 144   SimpleStmt -> Assignment
Rule 145   SimpleStmt -> ShortVarDecl
Rule 146   ExpressionStmt -> Expression
Rule 147   LabeledStmt -> Label COLON Statement
Rule 148   Label -> ID
Rule 149   IncDecStmt -> Expression PLUS_PLUS
Rule 150   IncDecStmt -> Expression MINUS_MINUS
Rule 151   Assignment -> ExpressionList assign_op ExpressionList
Rule 152   assign_op -> PLUS_EQ
Rule 153   assign_op -> MINUS_EQ
Rule 154   assign_op -> STAR_EQ
Rule 155   assign_op -> DIVIDE_EQ
Rule 156   assign_op -> MODULO_EQ
Rule 157   assign_op -> AMP_EQ
Rule 158   assign_op -> OR_EQ
Rule 159   assign_op -> CARET_EQ
Rule 160   assign_op -> EQ
Rule 161   ForStmt -> ForLoop Block
Rule 162   ForStmt -> WhileLoop Block
Rule 163   ForLoop -> FOR InitStmt SEMICOLON Condition SEMICOLON PostStmt
Rule 164   ForLoop -> FOR InitStmt SEMICOLON Condition SEMICOLON
Rule 165   ForLoop -> FOR InitStmt SEMICOLON SEMICOLON PostStmt
Rule 166   ForLoop -> FOR InitStmt SEMICOLON SEMICOLON
Rule 167   ForLoop -> FOR SEMICOLON Condition SEMICOLON PostStmt
Rule 168   ForLoop -> FOR SEMICOLON Condition SEMICOLON
Rule 169   ForLoop -> FOR SEMICOLON SEMICOLON PostStmt
Rule 170   ForLoop -> FOR SEMICOLON SEMICOLON
Rule 171   WhileLoop -> FOR Condition Block
Rule 172   WhileLoop -> FOR Block
Rule 173   InitStmt -> SimpleStmt
Rule 174   PostStmt -> SimpleStmt
Rule 175   Condition -> Expression
Rule 176   ReturnStmt -> RETURN SEMICOLON
Rule 177   ReturnStmt -> RETURN ExpressionList SEMICOLON
Rule 178   BreakStmt -> BREAK SEMICOLON
Rule 179   BreakStmt -> BREAK Label SEMICOLON
Rule 180   ContinueStmt -> CONTINUE SEMICOLON
Rule 181   ContinueStmt -> CONTINUE Label SEMICOLON
Rule 182   GotoStmt -> GOTO Label SEMICOLON
Rule 183   IfStmt -> IF SimpleStmt SEMICOLON Expression Block
Rule 184   IfStmt -> IF Expression Block
Rule 185   IfStmt -> IF SimpleStmt SEMICOLON Expression ElseStmt
Rule 186   IfStmt -> IF Expression ElseStmt
Rule 187   ElseStmt -> ELSE IfStmt
Rule 188   ElseStmt -> ELSE Block
Rule 189   SourceFile -> PackageClause ImportDeclList TopLevelDeclList
Rule 190   SourceFile -> PackageClause ImportDeclList
Rule 191   SourceFile -> PackageClause TopLevelDeclList
Rule 192   SourceFile -> PackageClause
Rule 193   PackageClause -> PACKAGE ID
Rule 194   ImportDeclList -> ImportDeclList ImportDecl SEMICOLON
Rule 195   ImportDeclList -> ImportDecl SEMICOLON
Rule 196   ImportDecl -> IMPORT ImportPath
Rule 197   ImportPath -> STRING_LIT
Rule 198   TopLevelDeclList -> TopLevelDeclList TopLevelDecl
Rule 199   TopLevelDeclList -> TopLevelDecl

Terminals, with rules where they appear

AMP                  : 107 125 131
AMP_AMP              : 91
AMP_EQ               : 157
AND_NOT              : 
ASSIGN               : 41
BOOL_LIT             : 66
BR                   : 
BREAK                : 178 179
CARET                : 101 119 129
CARET_EQ             : 159
CASE                 : 
CHAR_LIT             : 67
COLON                : 147
COMMA                : 33 35 49 78
CONST                : 31
CONTINUE             : 180 181
DATA_TYPE            : 6
DEFAULT              : 
DIVIDE               : 103 121
DIVIDE_EQ            : 155
DOT                  : 85
DOUBLE_QUOTES        : 
ELSE                 : 187 188
EQ                   : 32 40 160
EQ_EQ                : 92 110
FLOAT_LIT            : 64
FOR                  : 163 164 165 166 167 168 169 170 171 172
FUNC                 : 42 43 54 55
GE                   : 97 115
GOTO                 : 182
GT                   : 96 114
ID                   : 5 33 34 37 44 56 69 74 85 148 193
IF                   : 183 184 185 186
IMPORT               : 196
INT_LIT              : 63
LCURLY               : 1
LE                   : 95 113
LROUND               : 47 48 57 60 87 88
LSHIFT               : 105 123
LSQUARE              : 11 13 86
LT                   : 94 112
MAKE                 : 
MINUS                : 99 117 127
MINUS_EQ             : 153
MINUS_MINUS          : 150
MODULO               : 104 122
MODULO_EQ            : 156
NIL                  : 68
NOT                  : 128
NOT_EQ               : 93 111
OR                   : 100 118
OR_EQ                : 158
OR_OR                : 90
PACKAGE              : 193
PLUS                 : 98 116 126
PLUS_EQ              : 152
PLUS_PLUS            : 149
RCURLY               : 2
RETURN               : 176 177
RROUND               : 47 48 57 60 87 88
RSHIFT               : 106 124
RSQUARE              : 11 13 86
SEMICOLON            : 18 19 23 24 25 26 27 41 43 141 163 163 164 164 165 165 166 166 167 167 168 168 169 169 170 170 176 177 178 179 180 181 182 183 185 194 195
SINGLE_QUOTES        : 
STAR                 : 15 102 120 130
STAR_EQ              : 154
STRING_LIT           : 65 197
STRUCT               : 17
SWITCH               : 
TYPE                 : 37
VAR                  : 38
error                : 

Nonterminals, with rules where they appear

Arguments            : 84
ArrayLength          : 11
ArrayType            : 7 72
Assignment           : 144
BaseType             : 15
BasicLit             : 61
Block                : 53 138 161 162 171 172 183 184 188
BreakStmt            : 135
CompositeLit         : 62
Condition            : 163 164 167 168 171
ConstDecl            : 25
ConstSpec            : 31
ContinueStmt         : 136
Declaration          : 28 132
Element              : 77 78
ElementList          : 76 78
ElementType          : 11 13
ElseStmt             : 185 186
Expression           : 12 35 36 60 79 86 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 146 149 150 175 183 184 185 186
ExpressionList       : 32 35 40 41 87 151 151 177
ExpressionStmt       : 142
FieldDecl            : 18 19
FieldDeclList        : 17 18
ForLoop              : 161
ForStmt              : 140
FunctionBody         : 42 55
FunctionDecl         : 29
FunctionName         : 42 43
GotoStmt             : 137
IdentifierList       : 20 32 33 39 40 41 51
IfStmt               : 139 187
ImportDecl           : 194 195
ImportDeclList       : 189 190 194
ImportPath           : 196
IncDecStmt           : 143
Index                : 83
InitStmt             : 163 164 165 166
Label                : 147 179 181 182
LabeledStmt          : 133
Literal              : 58
LiteralType          : 70
LiteralValue         : 70 80
MethodDecl           : 30
MethodName           : 54 55
Operand              : 81
OperandName          : 59
PackageClause        : 189 190 191 192
ParameterDecl        : 49 50 57
ParameterList        : 47 49
Parameters           : 45 46
PointerType          : 9
PostStmt             : 163 165 167 169
PrimaryExpr          : 82 83 84 108
Receiver             : 54 55
Result               : 46
ReturnStmt           : 134
Selector             : 82
ShortVarDecl         : 145
Signature            : 42 43 54 55
SimpleStmt           : 141 173 174 183 185
SliceType            : 10 73
SourceFile           : 0
Statement            : 23 24 147
StatementList        : 21 23
StructType           : 8 71
TopLevelDecl         : 198 199
TopLevelDeclList     : 189 191 198
Type                 : 14 16 20 37 39 40 51 52
TypeDecl             : 26
TypeLit              : 4
TypeName             : 3
UnaryExpr            : 89 109
VarDecl              : 27
VarSpec              : 38
WhileLoop            : 162
add_op               : 
assign_op            : 151
lcurly               : 17 21 22 75 76
mul_op               : 
rcurly               : 17 21 22 75 76
rel_op               : 
unary_op             : 109

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (189) SourceFile -> . PackageClause ImportDeclList TopLevelDeclList
    (190) SourceFile -> . PackageClause ImportDeclList
    (191) SourceFile -> . PackageClause TopLevelDeclList
    (192) SourceFile -> . PackageClause
    (193) PackageClause -> . PACKAGE ID

    PACKAGE         shift and go to state 3

    SourceFile                     shift and go to state 1
    PackageClause                  shift and go to state 2

state 1

    (0) S' -> SourceFile .



state 2

    (189) SourceFile -> PackageClause . ImportDeclList TopLevelDeclList
    (190) SourceFile -> PackageClause . ImportDeclList
    (191) SourceFile -> PackageClause . TopLevelDeclList
    (192) SourceFile -> PackageClause .
    (194) ImportDeclList -> . ImportDeclList ImportDecl SEMICOLON
    (195) ImportDeclList -> . ImportDecl SEMICOLON
    (198) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl
    (199) TopLevelDeclList -> . TopLevelDecl
    (196) ImportDecl -> . IMPORT ImportPath
    (28) TopLevelDecl -> . Declaration
    (29) TopLevelDecl -> . FunctionDecl
    (30) TopLevelDecl -> . MethodDecl
    (25) Declaration -> . ConstDecl SEMICOLON
    (26) Declaration -> . TypeDecl SEMICOLON
    (27) Declaration -> . VarDecl SEMICOLON
    (42) FunctionDecl -> . FUNC FunctionName Signature FunctionBody
    (43) FunctionDecl -> . FUNC FunctionName Signature SEMICOLON
    (54) MethodDecl -> . FUNC Receiver MethodName Signature
    (55) MethodDecl -> . FUNC Receiver MethodName Signature FunctionBody
    (31) ConstDecl -> . CONST ConstSpec
    (37) TypeDecl -> . TYPE ID Type
    (38) VarDecl -> . VAR VarSpec

    $end            reduce using rule 192 (SourceFile -> PackageClause .)
    IMPORT          shift and go to state 8
    FUNC            shift and go to state 15
    CONST           shift and go to state 16
    TYPE            shift and go to state 17
    VAR             shift and go to state 18

    ImportDeclList                 shift and go to state 4
    TopLevelDeclList               shift and go to state 5
    ImportDecl                     shift and go to state 6
    TopLevelDecl                   shift and go to state 7
    Declaration                    shift and go to state 9
    FunctionDecl                   shift and go to state 10
    MethodDecl                     shift and go to state 11
    ConstDecl                      shift and go to state 12
    TypeDecl                       shift and go to state 13
    VarDecl                        shift and go to state 14

state 3

    (193) PackageClause -> PACKAGE . ID

    ID              shift and go to state 19


state 4

    (189) SourceFile -> PackageClause ImportDeclList . TopLevelDeclList
    (190) SourceFile -> PackageClause ImportDeclList .
    (194) ImportDeclList -> ImportDeclList . ImportDecl SEMICOLON
    (198) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl
    (199) TopLevelDeclList -> . TopLevelDecl
    (196) ImportDecl -> . IMPORT ImportPath
    (28) TopLevelDecl -> . Declaration
    (29) TopLevelDecl -> . FunctionDecl
    (30) TopLevelDecl -> . MethodDecl
    (25) Declaration -> . ConstDecl SEMICOLON
    (26) Declaration -> . TypeDecl SEMICOLON
    (27) Declaration -> . VarDecl SEMICOLON
    (42) FunctionDecl -> . FUNC FunctionName Signature FunctionBody
    (43) FunctionDecl -> . FUNC FunctionName Signature SEMICOLON
    (54) MethodDecl -> . FUNC Receiver MethodName Signature
    (55) MethodDecl -> . FUNC Receiver MethodName Signature FunctionBody
    (31) ConstDecl -> . CONST ConstSpec
    (37) TypeDecl -> . TYPE ID Type
    (38) VarDecl -> . VAR VarSpec

    $end            reduce using rule 190 (SourceFile -> PackageClause ImportDeclList .)
    IMPORT          shift and go to state 8
    FUNC            shift and go to state 15
    CONST           shift and go to state 16
    TYPE            shift and go to state 17
    VAR             shift and go to state 18

    TopLevelDeclList               shift and go to state 20
    ImportDecl                     shift and go to state 21
    TopLevelDecl                   shift and go to state 7
    Declaration                    shift and go to state 9
    FunctionDecl                   shift and go to state 10
    MethodDecl                     shift and go to state 11
    ConstDecl                      shift and go to state 12
    TypeDecl                       shift and go to state 13
    VarDecl                        shift and go to state 14

state 5

    (191) SourceFile -> PackageClause TopLevelDeclList .
    (198) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl
    (28) TopLevelDecl -> . Declaration
    (29) TopLevelDecl -> . FunctionDecl
    (30) TopLevelDecl -> . MethodDecl
    (25) Declaration -> . ConstDecl SEMICOLON
    (26) Declaration -> . TypeDecl SEMICOLON
    (27) Declaration -> . VarDecl SEMICOLON
    (42) FunctionDecl -> . FUNC FunctionName Signature FunctionBody
    (43) FunctionDecl -> . FUNC FunctionName Signature SEMICOLON
    (54) MethodDecl -> . FUNC Receiver MethodName Signature
    (55) MethodDecl -> . FUNC Receiver MethodName Signature FunctionBody
    (31) ConstDecl -> . CONST ConstSpec
    (37) TypeDecl -> . TYPE ID Type
    (38) VarDecl -> . VAR VarSpec
